# topic-sentiment-analyzer-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  main.py  scraper_service.py
app/model/: ml_model.py  preprocessors.py
app/pipeline/: ml_pipeline.py  preprocessing_parameters.json  preprocessors.py
app/tests/: test_ml_model.py  test_scraper_service.py
notebooks/: ml_workflow.ipynb
tests/: test_ml_model.py  test_scraper_service.py
